--- a/src/main/webapp/WEB-INF/same.html
+++ b/src/main/webapp/WEB-INF/same.html
@@ -12,7 +12,8 @@
     </script>
 </head>
 <body>
-    <form action="create" method="post">
+    <form action="create" method="get">
+        <input type="submit" name="create" value="Создать нового клиента">
         <h2>Добавление клиента</h2><br/>
         <label>Имя клиента</label>
         <input type="text" size="100" name="client-name"/> &nbsp;
